package strategy.payment;

public interface PaymentStrategy {
    boolean pay(double amount);
}